example/lib/src/arbs/errors/app_ne.arb
{
  "@@locale": "ne",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "एक त्रुटि उत्पन्न भयो",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "एक अप्रत्याशित त्रुटि उत्पन्न भयो",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "बग रिपोर्ट सफलतापूर्वक पठाइएको।",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}